--- a/index.html
+++ b/index.html
@@ -15,29 +15,57 @@
   </style>
 </head>
 <body>
+  <main class="card">
+    <section class="result">
+      <h1 class="result__title">Your Result</h1>
+      <div class="result__score">
+        <p class="result__score--points">76</p>
+        <p class="result__score--total">of 100</p>
+      </div>
+      <h2 class="result__word">Great</h2>
+      <p class="result__text">
+        You scored higher than 65% of the people who have taken these tests.
+      </p>
+    </section>
+    <section class="summary">
+      <h2 class="summary__title">Summary</h2>
 
-  Your Result
-  76
-  of 100
+      <div class="summary__category c1">
+        <div class="category__title">
+          <img class="category__title--icon" src="" alt="">
+          <p class="category__title--name">Reaction</p>
+        </div>
+        <p class="summary__category--score">80<span>/100</span></p>
+      </div>
 
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
+      <div class="summary__category c2">
+        <div class="category__title">
+          <img class="category__title--icon" src="" alt="">
+          <p class="category__title--name">Memory</p>
+        </div>
+        <p class="summary__category--score">92<span>/100</span></p>
+      </div>
 
-  Reaction
-  80 / 100
+      <div class="summary__category c3">
+        <div class="category__title">
+          <img class="category__title--icon" src="" alt="">
+          <p class="category__title--name">Verbal</p>
+        </div>
+        <p class="summary__category--score">61<span>/100</span></p>
+      </div>
 
-  Memory
-  92 / 100
+      <div class="summary__category c2">
+        <div class="category__title">
+          <img class="category__title--icon" src="" alt="">
+          <p class="category__title--name">Visual</p>
+        </div>
+        <p class="summary__category--score">72<span>/100</span></p>
+      </div>
 
-  Verbal
-  61 / 100
+      <a href="" class="summary__button">Continue</a>
 
-  Visual
-  72 / 100
-
-  Continue
+    </section>
+  </main>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
