--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
     </section>
     <section class="summary">
       <h2 class="summary__title">Summary</h2>
-
-      <div class="summary__category c1">
+      <div class="summary__cards">
+      </div>
+      
+      <!-- <div class="summary__category c1">
         <div class="category__title">
           <img class="category__title--icon" src="" alt="">
           <p class="category__title--name">Reaction</p>
@@ -60,11 +62,27 @@
           <p class="category__title--name">Visual</p>
         </div>
         <p class="summary__category--score">72<span>/100</span></p>
-      </div>
+      </div> -->
 
       <a href="" class="summary__button">Continue</a>
 
     </section>
+    <script>
+      const listEl = document.querySelector("div.summary__cards");
+      fetch('./data.json')
+          .then(res => res.json())
+          .then(data => {
+            data.forEach(element => {
+              listEl.insertAdjacentHTML('beforeend', `<div class="summary__category">
+                                                        <div class="category__title">
+                                                          <img class="category__title--icon" src="${element.icon}" alt="icon">
+                                                          <p class="category__title--name">${element.category}</p>
+                                                        </div>
+                                                        <p class="summary__category--score">${element.score}<span>/100</span></p>
+                                                      </div>`);
+            });
+          });
+    </script>
   </main>
   
   <div class="attribution">
