--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     </script>
   </main>
   
-  <div class="attribution">
+  <p class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="https://github.com/J-Potes" target="_blank">J-Potes</a>.
+  </p>
 </body>
 </html>
